--- a/helmcharts/next/templates/org_v2_checluster.yaml
+++ b/helmcharts/next/templates/org_v2_checluster.yaml
@@ -24,7 +24,7 @@ spec:
       preCreateSubPaths: true
       pvc:
         claimSize: '10Gi'
-  operands:
+  components:
     database:
       externalDb: false
     metrics:
