--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -2140,13 +2140,6 @@ spec:
                     storage:
                       description: Workspaces persistent storage.
                       properties:
-                        preCreateSubPaths:
-                          default: true
-                          description: Instructs the Che server to start a special
-                            Pod to pre-create a sub-path in the Persistent Volumes.
-                            Defaults to `false`, however it will need to enable it
-                            according to the configuration of your Kubernetes cluster.
-                          type: boolean
                         pvc:
                           description: PVC settings.
                           properties:
@@ -2165,8 +2158,7 @@ spec:
                           description: Overrides the container image used to create
                             sub-paths in the Persistent Volumes. This includes the
                             image tag. Omit it or leave it empty to use the default
-                            container image provided by the Operator. See also the
-                            `preCreateSubPaths` field.
+                            container image provided by the Operator.
                           type: string
                         pvcStrategy:
                           default: common
