--- a/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/org.eclipse.che_checlusters.yaml
@@ -1395,7 +1395,10 @@ spec:
                           description: 'Log level for the Che server: `INFO` or `DEBUG`.'
                           type: string
                         proxy:
-                          description: Proxy server settings.
+                          description: Proxy server settings for Kubernetes cluster.
+                            No additional configuration is required for OpenShift
+                            cluster. Specifying these settings for OpenShift cluster
+                            leads to overriding OpenShift proxy configuration.
                           properties:
                             credentialsSecretName:
                               description: The secret name that contains `user` and
@@ -1632,13 +1635,13 @@ spec:
                               type: object
                           type: object
                         externalDb:
-                          description: 'Instructs the Operator on whether to deploy
+                          description: Instructs the Operator on whether to deploy
                             a dedicated database. By default, a dedicated PostgreSQL
                             database is deployed as part of the Che installation.
                             When `externalDb` is `true`, no dedicated database will
                             be deployed by the Operator and you will need to provide
                             connection details to the external DB you are about to
-                            use. See also all the fields starting with: `chePostgres`.'
+                            use.
                           type: boolean
                         postgresDb:
                           default: dbche
@@ -2069,7 +2072,7 @@ spec:
                         template:
                           description: if users namespaces are not pre-created this
                             field defines the Kubernetes namespace created when a
-                            user starts his first workspace. It's possible to use
+                            user starts their first workspace. It's possible to use
                             `<username>`, `<userid>` and `<workspaceid>` placeholders,
                             such as che-workspace-<username>.
                           type: string
@@ -2317,8 +2320,8 @@ spec:
                     labels:
                       additionalProperties:
                         type: string
-                      description: Comma separated list of labels that can be used
-                        to organize and categorize objects by scoping and selecting.
+                      description: List of labels that can be used to organize and
+                        categorize objects by scoping and selecting.
                       type: object
                     tlsSecretName:
                       description: Name of a secret that will be used to setup ingress
