--- a/config/samples/org_v2_checluster.yaml
+++ b/config/samples/org_v2_checluster.yaml
@@ -16,7 +16,7 @@ metadata:
   name: eclipse-che
   namespace: eclipse-che
 spec:
-  workspaces:
+  devEnvironments:
     defaultNamespace:
       template: '<username>-che'
     storage:
@@ -26,7 +26,7 @@ spec:
       externalDb: false
     metrics:
       enable: true
-  ingress:
+  networking:
     domain: ''
     tlsSecretName: ''
     auth:
