--- a/helmcharts/next/templates/org_v2_checluster.yaml
+++ b/helmcharts/next/templates/org_v2_checluster.yaml
@@ -16,7 +16,7 @@ metadata:
   name: eclipse-che
   namespace: eclipse-che
 spec:
-  workspaces:
+  devEnvironments:
     defaultNamespace:
       template: '<username>-che'
     storage:
@@ -26,10 +26,10 @@ spec:
       externalDb: false
     metrics:
       enable: true
-  ingress:
-    domain: '{{ .Values.ingress.domain }}'
+  networking:
+    domain: '{{ .Values.networking.domain }}'
     tlsSecretName: 'che-tls'
     auth:
-      identityProviderURL: '{{ .Values.ingress.auth.identityProviderURL }}'
-      oAuthClientName: '{{ .Values.ingress.auth.oAuthClientName }}'
-      oAuthSecret: '{{ .Values.ingress.auth.oAuthSecret }}'
+      identityProviderURL: '{{ .Values.networking.auth.identityProviderURL }}'
+      oAuthClientName: '{{ .Values.networking.auth.oAuthClientName }}'
+      oAuthSecret: '{{ .Values.networking.auth.oAuthSecret }}'
