--- a/helmcharts/next/values.yaml
+++ b/helmcharts/next/values.yaml
@@ -10,7 +10,7 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
-ingress:
+networking:
   domain: ""
   auth:
     identityProviderURL: ""
