--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -97,7 +97,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.49.0-561.next
+  name: eclipse-che-preview-openshift.v7.49.0-562.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -150,7 +150,7 @@ spec:
           - description: Che components configuration.
             displayName: Components
             path: components
-          - description: Che authentication and TLS configuration.
+          - description: Networking, Che authentication and TLS configuration.
             displayName: Networking
             path: networking
           - description: Configuration of an alternative registry that stores Che
@@ -1410,7 +1410,7 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.49.0-561.next
+  version: 7.49.0-562.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
