--- a/config/crd/bases/org.eclipse.che_checlusters.yaml
+++ b/config/crd/bases/org.eclipse.che_checlusters.yaml
@@ -1394,7 +1394,7 @@ spec:
                         type: object
                     type: object
                   dashboard:
-                    description: Configuration settings related to the Dashboard sed
+                    description: Configuration settings related to the Dashboard used
                       by the Che installation.
                     properties:
                       HeaderMessage:
@@ -2118,7 +2118,7 @@ spec:
                     type: object
                 type: object
               networking:
-                description: Che authentication and TLS configuration.
+                description: Networking, Che authentication and TLS configuration.
                 properties:
                   annotations:
                     additionalProperties:
@@ -2245,7 +2245,7 @@ spec:
                   domain:
                     description: 'For OpenShift cluster Operator uses the domain to
                       generate a hostname for a route. The generated hostname will
-                      follow this pattern: che-<che-namespace>.<domain>, where <che-namespace>
+                      follow this pattern: eclipse-che.<domain>, where <che-namespace>
                       is the namespace where the CheCluster CRD is created. In a conjunction
                       with labels it creates a route, which is served by a non-default
                       Ingress controller. For Kubernetes cluster it contains a global
@@ -2253,9 +2253,7 @@ spec:
                       no defaults.'
                     type: string
                   hostname:
-                    description: Public hostname of the installed Che server. When
-                      value is omitted, the value it will be automatically set by
-                      the Operator.
+                    description: Public hostname of the installed Che server.
                     type: string
                   labels:
                     additionalProperties:
@@ -2264,8 +2262,8 @@ spec:
                       objects by scoping and selecting.
                     type: object
                   tlsSecretName:
-                    description: Name of a secret that will be used to setup ingress
-                      TLS termination when. When the field is empty string, the default
+                    description: Name of a secret that will be used to set up ingress
+                      TLS termination. When the field is empty string, the default
                       cluster certificate will be used. The secret must have `app.kubernetes.io/part-of=che.eclipse.org`
                       label.
                     type: string
