--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -86,7 +86,7 @@ metadata:
     capabilities: Seamless Upgrades
     categories: Developer Tools
     certified: "false"
-    containerImage: quay.io/abazko/operator:20758
+    containerImage: quay.io/eclipse/che-operator:next
     createdAt: "2021-05-11T18:38:31Z"
     description: A Kube-native development solution that delivers portable and collaborative
       developer workspaces.
@@ -97,7 +97,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.49.0-562.next
+  name: eclipse-che-preview-openshift.v7.49.0-564.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -1158,7 +1158,7 @@ spec:
                         value: "1"
                       - name: ADD_COMPONENT_READINESS_INIT_CONTAINERS
                         value: "false"
-                    image: quay.io/abazko/operator:20758
+                    image: quay.io/eclipse/che-operator:next
                     imagePullPolicy: Always
                     livenessProbe:
                       failureThreshold: 10
@@ -1410,7 +1410,7 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.49.0-562.next
+  version: 7.49.0-564.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
