--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -2635,7 +2635,7 @@ spec:
           value: "1"
         - name: ADD_COMPONENT_READINESS_INIT_CONTAINERS
           value: "false"
-        image: quay.io/abazko/operator:20758
+        image: quay.io/eclipse/che-operator:next
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 10
