--- a/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
+++ b/bundle/next/eclipse-che-preview-openshift/manifests/che-operator.clusterserviceversion.yaml
@@ -97,7 +97,7 @@ metadata:
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v3
     repository: https://github.com/eclipse-che/che-operator
     support: Eclipse Foundation
-  name: eclipse-che-preview-openshift.v7.49.0-564.next
+  name: eclipse-che-preview-openshift.v7.49.0-565.next
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -158,8 +158,7 @@ spec:
             displayName: Container registry
             path: containerRegistry
         statusDescriptors:
-          - description: Specifies the phase in which the Che deployment currently
-              is.
+          - description: Specifies the current phase of the Che deployment.
             displayName: ChePhase
             path: chePhase
             x-descriptors:
@@ -174,35 +173,34 @@ spec:
             path: cheVersion
             x-descriptors:
               - urn:alm:descriptor:text
-          - description: Public URL to the internal devfile registry.
+          - description: The public URL to the internal devfile registry.
             displayName: Devfile registry URL
             path: devfileRegistryURL
             x-descriptors:
               - urn:alm:descriptor:org.w3:link
-          - description: Specifies the phase in which the gateway deployment currently
-              is.
+          - description: Specifies the current phase of the gateway deployment.
             displayName: Gateway phase
             path: gatewayPhase
             x-descriptors:
               - urn:alm:descriptor:text
           - description: A human readable message indicating details about why the
-              Che deployment is in this phase.
+              Che deployment is in current phase.
             displayName: Message
             path: message
             x-descriptors:
               - urn:alm:descriptor:text
-          - description: Public URL to the internal plugin registry.
+          - description: The public URL to the internal plug-in registry.
             displayName: Plugin registry URL
             path: pluginRegistryURL
             x-descriptors:
               - urn:alm:descriptor:org.w3:link
-          - description: PostgreSQL version image is in use.
+          - description: The PostgreSQL version of the image in use.
             displayName: PostgreSQL version
             path: postgresVersion
             x-descriptors:
               - urn:alm:descriptor:text
           - description: A brief CamelCase message indicating details about why the
-              Che deployment is in this phase.
+              Che deployment is in current phase.
             displayName: Reason
             path: reason
             x-descriptors:
@@ -1410,7 +1408,7 @@ spec:
   maturity: stable
   provider:
     name: Eclipse Foundation
-  version: 7.49.0-564.next
+  version: 7.49.0-565.next
   webhookdefinitions:
     - admissionReviewVersions:
         - v1
