--- a/config/crd/bases/org_v1_che_crd.yaml
+++ b/config/crd/bases/org_v1_che_crd.yaml
@@ -263,6 +263,9 @@ spec:
                         to setup identity federation on the OpenShift side. Auto-generated
                         when left blank. See also the `OpenShiftoAuth` field.
                       type: string
+                    oAuthScope:
+                      description: Access Token Scope. Ignored for OpenShift due to hardcoded value 'user:full'.
+                      type: string
                     oAuthSecret:
                       description: Name of the secret set in the OpenShift `OAuthClient`
                         resource used to setup identity federation on the OpenShift
