--- a/deploy/deployment/openshift/combined.yaml
+++ b/deploy/deployment/openshift/combined.yaml
@@ -171,7 +171,7 @@ spec:
                     description: Name of the OpenShift `OAuthClient` resource used to setup identity federation on the OpenShift side. Auto-generated when left blank. See also the `OpenShiftoAuth` field.
                     type: string
                   oAuthScope:
-                    description: Access Token Scope. Ignored for OpenShift due to hardcoded value 'user:full'.
+                    description: Access Token Scope. Ignored for OpenShift due to hardcoded value `user:full`.
                     type: string
                   oAuthSecret:
                     description: Name of the secret set in the OpenShift `OAuthClient` resource used to setup identity federation on the OpenShift side. Auto-generated when left blank. See also the `OAuthClientName` field.
@@ -1588,7 +1588,7 @@ spec:
                         description: Name of the OpenShift `OAuthClient` resource used to set up identity federation on the OpenShift side.
                         type: string
                       oAuthScope:
-                        description: Access Token Scope. Ignored for OpenShift due to hardcoded value 'user:full'.
+                        description: Access Token Scope. Ignored for OpenShift due to hardcoded value `user:full`.
                         type: string
                       oAuthSecret:
                         description: Name of the secret set in the OpenShift `OAuthClient` resource used to set up identity federation on the OpenShift side.
